Adds IncomingQuantity to Product
