# src/StoneAssemblies.OdooBot/DataTransferObjects/ProductDto.g.cs
@@ -14,6 +14,7 @@ namespace StoneAssemblies.OdooBot.DataTransferObjects
         public string Description { get; set; }
         public List<ImageDto> Images { get; set; }
         public double InStockQuantity { get; set; }
+        public double IncomingQuantity { get; set; }
         public string QuantityUnit { get; set; }
         public double StandardPrice { get; set; }
         public double Price { get; set; }
