# src/StoneAssemblies.OdooBot/Entities/Product.cs
@@ -4,7 +4,7 @@ namespace StoneAssemblies.OdooBot.Entities;
 
 public class Product
 {
-    [Key] 
+    [Key]
     public Guid Id { get; set; }
 
     public long ExternalId { get; set; }
@@ -20,7 +20,9 @@ public class Product
     public List<Image> Images { get; set; }
 
     public double InStockQuantity { get; set; }
-    
+
+    public double IncomingQuantity { get; set; }
+
     public string QuantityUnit { get; set; }
 
     public double StandardPrice { get; set; }
