# src/StoneAssemblies.OdooBot/swagger.json
@@ -5936,6 +5936,10 @@
             "type": "number",
             "format": "double"
           },
+          "incomingQuantity": {
+            "type": "number",
+            "format": "double"
+          },
           "quantityUnit": {
             "type": "string",
             "nullable": true
@@ -5971,6 +5975,10 @@
             "nullable": true
           },
           "inStockQuantity": {
+            "type": "number",
+            "format": "double"
+          },
+          "incomingQuantity": {
             "type": "number",
             "format": "double"
           },
@@ -6048,6 +6056,10 @@
             "nullable": true
           },
           "inStockQuantity": {
+            "type": "number",
+            "format": "double"
+          },
+          "incomingQuantity": {
             "type": "number",
             "format": "double"
           },
